# lattice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.cc  camera.h  colors.cc  colors.h  configure  fixture.h  gl_widget.cc  gl_widget.h  gl_window.cc  gl_window.h  keyboard.cc  keyboard.h  main.cc  main_window.cc  main_window.h  mass.cc  mass.h  mass_spring_system.cc  mass_spring_system.h  multi_object_renderer.cc  multi_object_renderer.h  obj_loader.cc  obj_loader.h  plots_widget.cc  plots_widget.h  plotter.cc  plotter.h  shape_spec.cc  shape_spec.h  sim_object.h  spring.cc  spring.h  tab_widget.cc  tab_widget.h  utility.cc  utility.h  (+5 more)
include/lattice/: camera.h  colors.h  configuration.h  configuration_widget.h  generator.h  gl_widget.h  gl_window.h  keyboard.h  main_window.h  mass.h  mass_spring_system.h  shape_spec.h  shape_spec_widget.h  sim_object.h  socket.h  spring.h  stats.h  supervisor.h  tab_widget.h  window.h
include/lattice/toolbox/: numerics.h
lattice/lattice/: .clang-format  camera.cpp  camera.hpp  colors.cpp  colors.hpp  core.frag  core.vs  fixture.hpp  format.sh  gl_widget.cpp  gl_widget.hpp  keyboard.cpp  keyboard.hpp  main.cpp  mass.cpp  mass.hpp  mass_spring_system.cpp  mass_spring_system.hpp  point_mass.cpp  point_mass.hpp  renderable.cpp  renderable.hpp  shader.hpp  shape.cpp  shape.hpp  spring.cpp  spring.hpp  vec.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
lattice/lattice.xcodeproj/: project.pbxproj
lattice/lattice.xcodeproj/project.xcworkspace/xcuserdata/jarred.xcuserdatad/: UserInterfaceState.xcuserstate
lattice/lattice.xcodeproj/xcuserdata/jarred.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
lattice/lattice.xcodeproj/xcuserdata/jarred.xcuserdatad/xcschemes/: xcschememanagement.plist
py/: main.py
py/hookey/: saved_model.pb
py/hookey/variables/: variables.data-00000-of-00001  variables.index
py/nn_force/: saved_model.pb
py/nn_force/variables/: variables.data-00000-of-00001  variables.index
scripts/: configure  format  run  watch  xcode
shaders/: core.frag
sim_specs/: cube.spec  mass.blend
src/: camera.cc  colors.cc  configuration.cc  configuration_widget.cc  generator.cc  gl_widget.cc  gl_window.cc  keyboard.cc  main.cc  main_window.cc  mass.cc  mass_spring_system.cc  numerics.cc  obj_loader.cc  plots_widget.cc  shape_spec.cc  shape_spec_widget.cc  socket.cc  spring.cc  stats.cc  supervisor.cc  tab_widget.cc  window.cc
